[gd_scene load_steps=26 format=3 uid="uid://bm5ylsdt7kn3y"]

[ext_resource type="Script" path="res://scripts/enemy/enemy.gd" id="1_7ud6l"]
[ext_resource type="Script" path="res://scenes/components/velocity_component/velocity_component.gd" id="2_a1jxn"]
[ext_resource type="Script" path="res://scenes/components/health_component/health_component.gd" id="3_8xhwf"]
[ext_resource type="Texture2D" uid="uid://d3j5k1r2v82na" path="res://assets/demo_guy/demo_guy_front.png" id="4_1aa3w"]
[ext_resource type="PackedScene" uid="uid://dmoxbd2k6knqn" path="res://scenes/components/hit_flash_component/hit_flash_component.tscn" id="4_o6qgu"]
[ext_resource type="Script" path="res://scripts/state_machine/state_machine.gd" id="5_8chjj"]
[ext_resource type="Shader" path="res://resources/materials/hit_flash_component_material.gdshader" id="5_f714p"]
[ext_resource type="Script" path="res://scenes/entities/enemies/states/idle.gd" id="6_grbrm"]
[ext_resource type="PackedScene" uid="uid://bqp027bkxbbdq" path="res://scenes/components/death_component/death_component.tscn" id="6_vcgq6"]
[ext_resource type="Script" path="res://scenes/entities/enemies/states/stun.gd" id="7_8ix4e"]
[ext_resource type="Script" path="res://scenes/components/hurtbox_component/hurtbox_component.gd" id="7_vu7f8"]
[ext_resource type="Script" path="res://scenes/entities/enemies/states/aggro.gd" id="8_7auvh"]
[ext_resource type="PackedScene" uid="uid://k1on8wr4vmh3" path="res://scenes/components/stun_component/stun_component.tscn" id="9_eqb0h"]
[ext_resource type="Script" path="res://scenes/entities/enemies/states/attack.gd" id="9_f0u2e"]
[ext_resource type="Script" path="res://scenes/abilities/enemy_attacks/demo_guy_attack/demo_guy_attack.gd" id="15_rgvmr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jgdwf"]
radius = 6.0
height = 18.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xfjqp"]
resource_local_to_scene = true
shader = ExtResource("5_f714p")
shader_parameter/lerp_percent = 0.0

[sub_resource type="Animation" id="Animation_xtgq8"]
resource_name = "Idle"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1lyas"]
_data = {
"Idle": SubResource("Animation_xtgq8")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3avbw"]
animation = &"Idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gn7b4"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_a1hfj"]
states/Idle/node = SubResource("AnimationNodeAnimation_3avbw")
states/Idle/position = Vector2(411.5, 14)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_gn7b4")]
graph_offset = Vector2(-115.657, -46.53)

[sub_resource type="CircleShape2D" id="CircleShape2D_y6g3t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j80ml"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4kxxm"]
radius = 125.0

[node name="DemoGuy" type="CharacterBody2D"]
collision_layer = 256
collision_mask = 289
script = ExtResource("1_7ud6l")
metadata/_edit_group_ = true

[node name="DemoGuyCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_jgdwf")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("2_a1jxn")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_8xhwf")

[node name="HitFlashComponent" parent="." instance=ExtResource("4_o6qgu")]
hit_flash_material = SubResource("ShaderMaterial_xfjqp")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("6_vcgq6")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Sprite2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_1aa3w")
offset = Vector2(0, -8)
hframes = 2
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "res://assets/demo_guy/demo_guy_front.aseprite"
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1lyas")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_a1hfj")
anim_player = NodePath("../AnimationPlayer")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("5_8chjj")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("aggro_area", "attack_range_area")]
script = ExtResource("6_grbrm")
aggro_area = NodePath("../../AggroArea")
attack_range_area = NodePath("../../AttackRangeArea")

[node name="Stun" type="Node" parent="StateMachine"]
script = ExtResource("7_8ix4e")

[node name="Aggro" type="Node" parent="StateMachine"]
script = ExtResource("8_7auvh")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("9_f0u2e")

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
visible = false
position = Vector2(0, -10)
script = ExtResource("7_vu7f8")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, 3)
rotation = 1.5708
shape = SubResource("CircleShape2D_y6g3t")

[node name="AttackRangeArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRangeArea"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_j80ml")

[node name="AggroArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroArea"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_4kxxm")

[node name="StunComponent" parent="." instance=ExtResource("9_eqb0h")]

[node name="DemoAttack" type="Node2D" parent="."]
script = ExtResource("15_rgvmr")
